--- a/styls/blog.css
+++ b/styls/blog.css
@@ -2,9 +2,7 @@ div{
 background-color: tomato;
 text-align: center;
 padding: 20px;
-/* margin: 10px; */
-/* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
 font-size: large;
 font-family: Arial, Helvetica, sans-serif;
-margin-bottom: 10px;
+margin-bottom: 2%;
 }
