--- a/styls/blog.css
+++ b/styls/blog.css
@@ -4,5 +4,5 @@ text-align: center;
 padding: 20px;
 font-size: large;
 font-family: Arial, Helvetica, sans-serif;
-margin-bottom: 2%;
+margin: 20px;
 }
